--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 data/era5_data/era5_data.csv filter=lfs diff=lfs merge=lfs -text
+data/era5_data/train/train.csv filter=lfs diff=lfs merge=lfs -text
