--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/era5_data/era5_data.csv filter=lfs diff=lfs merge=lfs -text
 data/era5_data/train/train.csv filter=lfs diff=lfs merge=lfs -text
+DeepSummit/src/models/stormer_model.pth filter=lfs diff=lfs merge=lfs -text
